fixes The main embed configuration page should be stretched to the bottom of the page. So as every other page on the app.

--- a/public/scss/_layout-content.scss
+++ b/public/scss/_layout-content.scss
@@ -35,6 +35,7 @@
     ._content {
       flex-grow: 1;
       width: calc(100vw - 300px - 300px - 20px);
+      min-height: calc( 100vh - 57px );
 
       ._section{
 
